--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cfxjs/use-wallet": "^0.0.19",
+    "decimal.js": "^10.3.1",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
